crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@not_junction_single_pk_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 393
expression: rendered
---
from __future__ import annotations

from django.db import models


class Other(models.Model):
    id = models.IntegerField(primary_key=True)

    class Meta:
        db_table = "other"
