crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@not_junction_single_pk_Drizzle_pg.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const other = pgTable("other", {
  id: integer("id").primaryKey(),
});

export const otherRelations = relations(other, ({ one, many }) => ({
  regular: many(regular),
}));
