crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@one_to_one_shared_primary_key_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

import (
	"github.com/google/uuid"
)

type User struct {
	ID      uuid.UUID `gorm:"column:id;primaryKey;type:uuid" json:"id"`
	Profile *Profile  `gorm:"foreignKey:UserID" json:"-"`
}

func (User) TableName() string { return "user" }
